fixed alignment issues on product name

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -66,7 +66,6 @@ body {
   color: rgb(72, 72, 255);
   text-align: center;
   cursor: pointer;
-  white-space: nowrap;
 }
 
 .ProductEntry-Container:hover > .ProductEntry-Name{
